@@ -21,6 +21,7 @@ option(DEBUG_BUILD "Enable debug build mode" OFF)
 option(EMBED_FONT_QT "Embed font for QT GUI (usefull for some buggy QT installations)" OFF)
 option(FAST_MATH "Enable mathematic approximations to make code faster" ON)
 option(FAST_TRIG "Enable trigonometric approximations to make code faster" ON)
+option(WITH_MINGW_STD_THREADS "Use MinGW-Std-Threads 3rd party library. Useful with old MinGW versions that do not include C++11 threads libraries or where they are slower than they should. Set it to OFF with newer versions of MinGW or a conflict might happen causing crashes." OFF)
 option(BLENDER_ADDON "Build YafaRay as a self-contained blender add-on" OFF)
 
 ###### Packages and Definitions #########
@@ -183,15 +184,20 @@ else(DEBUG_BUILD)
 endif(DEBUG_BUILD)
 
 if(WIN32 AND MINGW)
+	if(WITH_MINGW_STD_THREADS)
+		message("Using MinGW_Std_Threads library: yes")
+		add_definitions("-DHAVE_MINGW_STD_THREADS")
 	set(MINGW_STD_THREADS_INCLUDE_DIR "MINGW_STD_THREADS_INCLUDE_DIR-NOTFOUND")
 	find_path(MINGW_STD_THREADS_INCLUDE_DIR mingw-std-threads/mingw.thread.h)
 	if(${MINGW_STD_THREADS_INCLUDE_DIR} STREQUAL "MINGW_STD_THREADS_INCLUDE_DIR-NOTFOUND")
 		message(FATAL_ERROR "Error: MinGW-Threads headers not found. Download them into the include directory with: git clone https://github.com/meganz/mingw-std-threads")
 	endif(${MINGW_STD_THREADS_INCLUDE_DIR} STREQUAL "MINGW_STD_THREADS_INCLUDE_DIR-NOTFOUND")
-	set(YAF_INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/include ${CMAKE_BINARY_DIR} ${MINGW_STD_THREADS_INCLUDE_DIR})
-else(WIN32 AND MINGW)
-	set(YAF_INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/include ${CMAKE_BINARY_DIR})
+	else(WITH_MINGW_STD_THREADS)
+		message("Using MinGW_Std_Threads library: no (using standard C++11 threads)")
+	endif(WITH_MINGW_STD_THREADS)
 endif(WIN32 AND MINGW)
+
+set(YAF_INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/include ${CMAKE_BINARY_DIR})
 
 if (USER_INSTALL_PREFIX)
 	set(CMAKE_INSTALL_PREFIX ${USER_INSTALL_PREFIX})
