@@ -8,6 +8,7 @@ Dependencies:
     >=libxml2-2.9.1
     >=boost-1.5.8
   Optional, depending on options selected in CMake:
+    meganz/mingw-std-threads
     >=opencv-3.1.0
     >=freetype-2.4.0
     >=libpng-1.2.56
